# api-consulta

./: .env  database.py  pyproject.toml
src/: database.py  main.py
src/config/: config.py
src/repositories/: atendimento_repository.py
src/routers/: atendimento_router.py
src/schemas/: atendimento_response.py
src/security/: api_key.py
src/services/: atendimento_service.py
