[project]
name = "api-dashboard-er"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.136.3",
    "pydantic>=2.13.4",
    "pydantic-settings>=2.14.1",
    "sqlalchemy==2.0.46",
    "sqlalchemy-iris[intersystems]==0.18.1",
]

[dependency-groups]
dev = [
    "intersystems-irispython>=5.1.2",
    "pyright>=1.1.409",
    "python-dotenv>=1.2.2",
    "ruff>=0.15.15",
    "sqlalchemy-iris[intersystems]>=0.18.1",
    "sqlalchemy[asyncio]>=2.0.46",
    "uvicorn>=0.49.0",
]

[tool.pyright]
typeCheckingMode = "strict"
useLibraryCodeForTypes = true
pythonVersion = "3.12"
venvPath = "."
venv = ".venv"
include = ["src"]
exclude = ["**/.*", "**/.venv", "**/venv", "**/node_modules", "**/__pycache__"]
executionEnvironments = [{ root = "src" }]

[tool.ruff.lint]
select = ["E", "F", "PL", "B", "UP", "RUF", "FAST"]
